force-app/main/default/objects/SFW_Folder__c/SFW_Folder__c.object-meta.xml
<CustomObject>
    <description>Virtual folder hierarchy for Salesforce File Workspace.</description>
    <label>Workspace Folder</label>
    <nameField><label>Folder Name</label><type>Text</type></nameField>
    <pluralLabel>Workspace Folders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>