force-app/main/default/objects/SFW_Folder__c/fields/Icon_Name__c.field-meta.xml
<CustomField>
    <fullName>Icon_Name__c</fullName><defaultValue>&quot;standard:folder&quot;</defaultValue>
    <label>SLDS Icon Name</label><length>80</length><required>false</required><type>Text</type>
</CustomField>