force-app/main/default/objects/SFW_Folder__c/fields/Is_Archived__c.field-meta.xml
<CustomField>
    <fullName>Is_Archived__c</fullName><defaultValue>false</defaultValue><label>Archived</label><type>Checkbox</type>
</CustomField>