force-app/main/default/objects/SFW_Folder__c/fields/Parent_Folder__c.field-meta.xml
<CustomField>
    <fullName>Parent_Folder__c</fullName><deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Folder</label><referenceTo>SFW_Folder__c</referenceTo><relationshipLabel
    >Child Folders</relationshipLabel>
    <relationshipName>Child_Folders</relationshipName><required>false</required><type>Lookup</type>
</CustomField>